--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-slider": "^1.1.2",
     "clsx": "^2.0.0",
     "next": "13.4.12",
     "react": "18.2.0",
