--- a/turbo.json
+++ b/turbo.json
@@ -9,7 +9,11 @@
     "lint": {},
     "dev": {
       "cache": false,
-      "persistent": true
+      "persistent": true,
+      "dependsOn": ["watch"]
+    },
+    "watch": {
+      "cache": false
     }
   }
 }
